# open_telemetry_poc

./: README.md  app.py  main.py  pyproject.toml
prometheus/: prometheus.yml
tmp/: otel-collector-config.yaml
