[project]
name = "otel-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "opentelemetry-distro>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "pip>=25.3",
]
